@@ -1,17 +1,9 @@
 package com.loanmanagement.loan.domain.model.entity;
 
 import com.loanmanagement.domain.event.DomainEvent;
-import com.loanmanagement.sharedkernel.domain.value.Money;
-import com.loanmanagement.sharedkernel.InterestRate;
-import com.loanmanagement.sharedkernel.InstallmentCount;
-import com.loanmanagement.loan.domain.model.value.PaymentResult;
-import com.loanmanagement.loan.domain.model.value.PaymentCalculation;
-import com.loanmanagement.loan.domain.model.value.LoanId;
-import com.loanmanagement.loan.domain.model.value.InstallmentId;
-import com.loanmanagement.loan.exception.NoPayableInstallmentsException;
+import com.loanmanagement.domain.model.value.*;
 import java.time.LocalDate;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.math.BigDecimal;
 
 public class Loan {
@@ -24,8 +16,8 @@ public class Loan {
     private final LocalDate createDate;
     private boolean isPaid;
     private final List<LoanInstallment> installments;
-    private final List<DomainEvent> domainEvents = new ArrayList<>();
 
+    private final List<DomainEvent> domainEvents = new ArrayList<>();
     public static Loan create(
             Long id,
             Long customerId,
@@ -59,9 +51,7 @@ public class Loan {
     }
 
     private static Money calculateTotalAmount(Money principal, InterestRate rate) {
-        // Simple interest calculation - in real scenario this would be more sophisticated
-        BigDecimal interestAmount = principal.getAmount().multiply(rate.getValue());
-        Money interest = Money.of(interestAmount);
+        Money interest = rate.calculateInterest(principal);
         return principal.add(interest);
     }
 
@@ -69,16 +59,19 @@ public class Loan {
             Long loanId, Money totalAmount, InstallmentCount count
     ) {
         List<LoanInstallment> installments = new ArrayList<>();
-        Money installmentAmount = totalAmount.divide(count.getValue());
+        Money installmentAmount = new Money(
+                totalAmount.getValue().divide(
+                        BigDecimal.valueOf(count.getValue()), 2, RoundingMode.HALF_UP
+                )
+        );
 
         LocalDate nextMonth = LocalDate.now().plusMonths(1);
         LocalDate dueDate = nextMonth.withDayOfMonth(1);
 
         for (int i = 0; i < count.getValue(); i++) {
-            installments.add(LoanInstallment.create(
-                    InstallmentId.generate(),
-                    LoanId.of(loanId.toString()),
-                    i + 1,
+            installments.add(new LoanInstallment(
+                    null, // ID will be assigned by persistence layer
+                    loanId,
                     installmentAmount,
                     dueDate.plusMonths(i)
             ));
@@ -99,66 +92,47 @@ public class Loan {
 
         Money remainingAmount = paymentAmount;
         int installmentsPaid = 0;
-        Money totalSpent = Money.of(BigDecimal.ZERO);
+        Money totalSpent = new Money(BigDecimal.ZERO);
 
         for (LoanInstallment installment : unpaidInstallments) {
-            PaymentCalculation calculation = installment.calculatePaymentAmount(paymentDate);
-            Money paymentRequired = calculation.getTotalAmount();
+            Money paymentRequired = installment.calculatePaymentAmount(paymentDate);
 
-            if (remainingAmount.isGreaterThanOrEqualTo(paymentRequired)) {
-                installment.markAsPaid(paymentDate, calculation);
+            if (remainingAmount.isGreaterThanOrEqual(paymentRequired)) {
+                installment.pay(paymentDate);
                 remainingAmount = remainingAmount.subtract(paymentRequired);
                 totalSpent = totalSpent.add(paymentRequired);
                 installmentsPaid++;
-
-                if (remainingAmount.equals(Money.of(BigDecimal.ZERO))) {
-                    break;
-                }
             } else {
-                break;
+                break; // Cannot pay partial installments
             }
         }
 
         updateLoanStatus();
 
-        // Create a simple payment calculation for the result
-        PaymentCalculation resultCalculation = PaymentCalculation.onTime(totalSpent);
-        return PaymentResult.successful(resultCalculation);
+        return new PaymentResult(installmentsPaid, totalSpent, isPaid);
     }
 
     private List<LoanInstallment> getPayableInstallments(LocalDate paymentDate) {
+        LocalDate maxPayableDate = paymentDate.plusMonths(3);
+
         return installments.stream()
-                .filter(installment -> !installment.isPaid())
-                .filter(installment -> !installment.getDueDate().isAfter(paymentDate.plusDays(30)))
+                .filter(i -> !i.isPaid())
+                .filter(i -> !i.getDueDate().isAfter(maxPayableDate))
                 .sorted(Comparator.comparing(LoanInstallment::getDueDate))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void updateLoanStatus() {
         this.isPaid = installments.stream().allMatch(LoanInstallment::isPaid);
     }
 
-    // Getters following DDD principles - expose only necessary data
+    // Getters
     public Long getId() { return id; }
     public Long getCustomerId() { return customerId; }
     public Money getLoanAmount() { return loanAmount; }
     public Money getPrincipalAmount() { return principalAmount; }
-    public InterestRate getInterestRate() { return interestRate; }
-    public InstallmentCount getNumberOfInstallments() { return numberOfInstallments; }
-    public LocalDate getCreateDate() { return createDate; }
     public boolean isPaid() { return isPaid; }
-    public List<LoanInstallment> getInstallments() { return new ArrayList<>(installments); }
-
-    // Domain events support for eventual consistency
-    public List<DomainEvent> getDomainEvents() {
-        return new ArrayList<>(domainEvents);
-    }
-
-    public void clearDomainEvents() {
-        domainEvents.clear();
-    }
-
-    private void addDomainEvent(DomainEvent event) {
-        domainEvents.add(event);
+    public List<LoanInstallment> getInstallments() {
+        return Collections.unmodifiableList(installments);
     }
 }
